--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>KMD Automóveis</title>
 
     <link rel="stylesheet" href="./css/global.css">
-    <link rel="stylesheet" href="./css/page-landing.css">
+    <link rel="stylesheet" href="./css/pages/page-landing.css">
 
     <link
         href="https://fonts.googleapis.com/css2?family=Archivo:wght@500;600&family=Inter:wght@400;500;600&display=swap"
