--- a/index.html
+++ b/index.html
@@ -2,47 +2,47 @@
 <html lang="pt-br">
 
 <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>KMD Automóveis</title>
+  <title>KMD Automóveis</title>
 
-    <link rel="stylesheet" href="./css/global.css">
-    <link rel="stylesheet" href="./css/pages/page-landing.css">
+  <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@500;600&family=Inter:wght@400;500;600&display=swap"
+    rel="stylesheet">
 
-    <link
-        href="https://fonts.googleapis.com/css2?family=Archivo:wght@500;600&family=Inter:wght@400;500;600&display=swap"
-        rel="stylesheet">
+  <link rel="stylesheet" href="./css/global.css">
+  <link rel="stylesheet" href="./css/pages/page-landing.css">
+  
 </head>
 
 <body>
-    <div class="container">
-        <main>
-            <div class="logo">
-                <img src="./assets/icons/logo.svg" alt="logo KMD">
-            </div>
+  <div class="container">
+    <main>
+      <div class="logo">
+        <img src="./assets/icons/logo.svg" alt="logo KMD">
+      </div>
 
-            <div class="text">
-                <h2 class="title">
-                    Compre um carro de maneira simples e fácil
-                </h2>
+      <div class="text">
+        <h2 class="title">
+          Compre um carro de maneira simples e fácil
+        </h2>
 
-                <p>
-                    Vários modelos para você dirigir seguro, com conforto e segurança.
-                </p>
-            </div>
+        <p>
+          Vários modelos para você dirigir seguro, com conforto e segurança.
+        </p>
+      </div>
 
-            <a class="button" href="#">Começar agora</a>
-        </main>
+      <a class="button" href="./list-cars.html">Começar agora</a>
+    </main>
 
-        <div class="image">
-            <img src="./assets/images/hero-image.png" alt="imagem de carro">
-        </div>
+    <div class="image">
+      <img src="./assets/images/hero-image.png" alt="imagem de carro">
     </div>
+  </div>
 </body>
 
 </html>
