Added overflow and links

--- a/list-cars.html
+++ b/list-cars.html
@@ -23,7 +23,9 @@
   <div class="container">
     <header>
       <div class="box-purple">
-        <img src="./assets/icons/union.svg" alt="X">
+        <a href="./index.html">
+          <img src="./assets/icons/union.svg" alt="X">
+        </a>
       </div>
 
       <div class="header-content">
@@ -32,7 +34,11 @@
         </h3>
 
         <div class="box-login">
-          <p>Faça Login</p>
+          <p>
+            <a href="#">
+              Faça Login
+            </a>
+          </p>
 
           <div class="user">
             <img src="./assets/icons/perfil.svg" alt="Photo">
@@ -47,12 +53,18 @@
           <span class="line"></span>
 
           <div class="home">
-            <img src="./assets/icons/home.svg" alt="Home">
+            <a href="./list-cars.html">
+              <img src="./assets/icons/home.svg" alt="Home">
+            </a>
           </div>
         </div>
 
-        <div class="profile">
-          <img src="./assets/icons/perfil.svg" alt="Profile">
+        <div class="block">
+          <div class="profile">
+            <a href="#">
+              <img src="./assets/icons/perfil.svg" alt="profile">
+            </a>
+          </div>
         </div>
       </div>
     </aside>
