Created the List of Cars

--- a/list-cars.html
+++ b/list-cars.html
@@ -47,27 +47,185 @@
       </div>
     </header>
 
-    <aside class="asidebar">
-      <div class="asidebar-content">
-        <div class="block">
-          <span class="line"></span>
+    <div class="content">
+      <aside class="asidebar">
+        <div class="asidebar-content">
+          <div class="block">
+            <span class="line"></span>
 
-          <div class="home">
-            <a href="./list-cars.html">
-              <img src="./assets/icons/home.svg" alt="Home">
-            </a>
+            <div class="home">
+              <a href="./list-cars.html">
+                <img src="./assets/icons/home.svg" alt="Home">
+              </a>
+            </div>
+          </div>
+
+          <div class="block">
+            <div class="profile">
+              <a href="#">
+                <img src="./assets/icons/perfil.svg" alt="profile">
+              </a>
+            </div>
           </div>
         </div>
+      </aside>
 
-        <div class="block">
-          <div class="profile">
-            <a href="#">
-              <img src="./assets/icons/perfil.svg" alt="profile">
-            </a>
-          </div>
+      <div class="cars">
+        <div class="header-content">
+          <h2 class="title">Carros disponíveis</h2>
+
+          <p>Total 12 carros</p>
         </div>
+
+        <hr>
+
+        <main>
+          <div class="car">
+            <div class="car-content">
+              <a href="#">
+                <div class="car-image">
+                  <img src="./assets/images/RS5Coupe.png" alt="RS 5 Coupé">
+                </div>
+
+                <hr>
+
+                <div class="info">
+                  <span>AUDI</span>
+
+                  <div class="info-content">
+                    <div class="group-info">
+                      <h3>RS 5 Coupé</h3>
+                      <span>R$ 90,000.00</span>
+                      <img src="./assets/icons/energy.svg" alt="Elétrico">
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <div class="car">
+            <div class="car-content">
+              <a href="#">
+                <div class="car-image">
+                  <img src="./assets/images/Corvete Z06.png" alt="RS 5 Coupé">
+                </div>
+
+                <hr>
+
+                <div class="info">
+                  <span>CHEVROLET</span>
+
+                  <div class="info-content">
+                    <div class="group-info">
+                      <h3>Corvete Z06</h3>
+                      <span>R$ 90,000.00</span>
+                      <img src="./assets/icons/gasoline.svg" alt="Elétrico">
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <div class="car">
+            <div class="car-content">
+              <a href="#">
+                <div class="car-image">
+                  <img src="./assets/images/Porche.png" alt="Panamera">
+                </div>
+
+                <hr>
+
+                <div class="info">
+                  <span>PORCHE</span>
+
+                  <div class="info-content">
+                    <div class="group-info">
+                      <h3>Panamera</h3>
+                      <span>R$ 90,000.00</span>
+                      <img src="./assets/icons/energy.svg" alt="Elétrico">
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <div class="car">
+            <div class="car-content">
+              <a href="#">
+                <div class="car-image">
+                  <img src="./assets/images/Lambo.png" alt="Huracan">
+                </div>
+
+                <hr>
+
+                <div class="info">
+                  <span>LAMBORGHINI</span>
+
+                  <div class="info-content">
+                    <div class="group-info">
+                      <h3>Huracan</h3>
+                      <span>R$ 90,000.00</span>
+                      <img src="./assets/icons/gasoline.svg" alt="Elétrico">
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <div class="car">
+            <div class="car-content">
+              <a href="#">
+                <div class="car-image">
+                  <img src="./assets/images/Volvo.png" alt="XC40">
+                </div>
+
+                <hr>
+
+                <div class="info">
+                  <span>VOLVO</span>
+
+                  <div class="info-content">
+                    <div class="group-info">
+                      <h3>XC40</h3>
+                      <span>R$ 90,000.00</span>
+                      <img src="./assets/icons/alcohol.svg" alt="Elétrico">
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <div class="car">
+            <div class="car-content">
+              <a href="#">
+                <div class="car-image">
+                  <img src="./assets/images/Lancer.png" alt="Lancer Evo X">
+                </div>
+
+                <hr>
+
+                <div class="info">
+                  <span>MITSUBISHI</span>
+
+                  <div class="info-content">
+                    <div class="group-info">
+                      <h3>Lancer Evo X</h3>
+                      <span>R$ 90,000.00</span>
+                      <img src="./assets/icons/gasoline.svg" alt="Elétrico">
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+        </main>
       </div>
-    </aside>
+    </div>
   </div>
 </body>
 
