--- a/list-cars.html
+++ b/list-cars.html
@@ -16,6 +16,7 @@
 
   <link rel="stylesheet" href="./css/global.css">
   <link rel="stylesheet" href="./css/pages/list-cars.css">
+  <link rel="stylesheet" href="./css/partials/aside-header.css">
 
 </head>
 
