--- a/list-cars.html
+++ b/list-cars.html
@@ -36,7 +36,7 @@
 
         <div class="box-login">
           <p>
-            <a href="#">
+            <a href="./login-user.html">
               Faça Login
             </a>
           </p>
@@ -63,7 +63,7 @@
 
           <div class="block">
             <div class="profile">
-              <a href="#">
+              <a href="./login-user.html">
                 <img src="./assets/icons/perfil.svg" alt="profile">
               </a>
             </div>
