The screen of 'Login User' has been updated

--- a/login-user.html
+++ b/login-user.html
@@ -111,7 +111,7 @@
           <div class="button">
             <button type="button">Login</button>
 
-            <button class="register">Criar conta gratuita</button>
+            <button type="button" class="register">Criar conta gratuita</button>
           </div>
         </main>
       </div>
