Updated Titles of Pages

--- a/login-user.html
+++ b/login-user.html
@@ -9,7 +9,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Carros</title>
+  <title>KMD | Login de Usuário</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@500;600&family=Inter:wght@400;500;600&display=swap"
     rel="stylesheet">
@@ -34,7 +34,7 @@
 
       <div class="header-content">
         <h3 class="title-page">
-          Início
+          Login
         </h3>
 
         <div class="box-login">
@@ -76,7 +76,7 @@
 
       <div class="wrapper-form">
         <div class="image">
-          <img src="./assets/images/car-create-account.png" alt="imagem de carro">
+          <img src="./assets/images/login-user.png" alt="imagem de carro">
         </div>
 
         <main>
