--- a/create-user.html
+++ b/create-user.html
@@ -9,7 +9,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Carros</title>
+  <title>KMD | Cadastro de Usuário</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@500;600&family=Inter:wght@400;500;600&display=swap"
     rel="stylesheet">
@@ -33,7 +33,7 @@
 
       <div class="header-content">
         <h3 class="title-page">
-          Início
+          Cadastro
         </h3>
 
         <div class="box-login">
