The page of 'Show Car' has been updated

--- a/show-car.html
+++ b/show-car.html
@@ -9,7 +9,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Carros</title>
+  <title>KMD | Carro</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@500;600&family=Inter:wght@400;500;600&display=swap"
     rel="stylesheet">
@@ -31,21 +31,16 @@
       </div>
 
       <div class="header-content">
-        <h3 class="title-page">
-          Início
-        </h3>
+        <a href="./list-cars.html">
+          <img src="./assets/icons/arrow.svg" alt="<-">
+        </a>
 
-        <div class="box-login">
-          <p>
-            <a href="./login-user.html">
-              Faça Login
-            </a>
-          </p>
-
-          <div class="user">
-            <img src="./assets/icons/perfil.svg" alt="Photo">
-          </div>
+        <div class="wrapper-title">
+          <span>AUDI</span>
+          <h3>Q3 Baita Foda <span>R$ 90,000.00</span></h3>
         </div>
+
+      <hr>
       </div>
     </header>
 
@@ -81,7 +76,7 @@
           <div class="car-information">
             <div class="info-block">
               <div class="icon">
-                <img src="./assets/icons/E-mail.svg" alt="Email">
+                <img src="./assets/icons/speed.svg" alt="Speed">
               </div>
 
               <p>270km/h</p>
@@ -89,7 +84,7 @@
 
             <div class="info-block">
               <div class="icon">
-                <img src="./assets/icons/E-mail.svg" alt="Email">
+                <img src="./assets/icons/up.svg" alt="Up">
               </div>
 
               <p>6.8s</p>
@@ -97,7 +92,7 @@
 
             <div class="info-block">
               <div class="icon">
-                <img src="./assets/icons/E-mail.svg" alt="Email">
+                <img class="opc" src="./assets/icons/gasoline.svg" alt="Fuel">
               </div>
 
               <p>Gasolina</p>
@@ -105,7 +100,7 @@
 
             <div class="info-block">
               <div class="icon">
-                <img src="./assets/icons/E-mail.svg" alt="Email">
+                <img src="./assets/icons/transmission.svg" alt="Transmission">
               </div>
 
               <p>Auto</p>
@@ -113,7 +108,7 @@
 
             <div class="info-block">
               <div class="icon">
-                <img src="./assets/icons/E-mail.svg" alt="Email">
+                <img src="./assets/icons/perfil.svg" alt="People">
               </div>
 
               <p>5 pessoas</p>
@@ -121,7 +116,7 @@
 
             <div class="info-block">
               <div class="icon">
-                <img src="./assets/icons/E-mail.svg" alt="Email">
+                <img src="./assets/icons/hp.svg" alt="HP">
               </div>
 
               <p>280 HP</p>
@@ -139,9 +134,7 @@
             </p>
           </div>
 
-          <div class="button">
             <button type="button">Comprar carro</button>
-          </div>
         </main>
       </div>
     </div>
