The Pages 'Create User and Login user' has been updated

--- a/create-user.html
+++ b/create-user.html
@@ -38,7 +38,7 @@
 
         <div class="box-login">
           <p>
-            <a href="#">
+            <a href="./login-user.html">
               Faça Login
             </a>
           </p>
