--- a/login-user.html
+++ b/login-user.html
@@ -111,7 +111,7 @@
           <div class="button">
             <button type="button">Login</button>
 
-            <button type="button" class="register">Criar conta gratuita</button>
+            <a href="./create-user.html" class="register">Criar conta gratuita</a>
           </div>
         </main>
       </div>
