Show Car by API

--- a/show-car.html
+++ b/show-car.html
@@ -40,7 +40,7 @@
           <h3>Q3 Baita Foda <span>R$ 90,000.00</span></h3>
         </div>
 
-      <hr>
+        <hr>
       </div>
     </header>
 
@@ -72,73 +72,13 @@
           <img src="./assets/images/car-selected.png" alt="imagem de carro">
         </div>
 
-        <main>
-          <div class="car-information">
-            <div class="info-block">
-              <div class="icon">
-                <img src="./assets/icons/speed.svg" alt="Speed">
-              </div>
-
-              <p>270km/h</p>
-            </div>
-
-            <div class="info-block">
-              <div class="icon">
-                <img src="./assets/icons/up.svg" alt="Up">
-              </div>
-
-              <p>6.8s</p>
-            </div>
-
-            <div class="info-block">
-              <div class="icon">
-                <img class="opc" src="./assets/icons/gasoline.svg" alt="Fuel">
-              </div>
-
-              <p>Gasolina</p>
-            </div>
-
-            <div class="info-block">
-              <div class="icon">
-                <img src="./assets/icons/transmission.svg" alt="Transmission">
-              </div>
-
-              <p>Auto</p>
-            </div>
-
-            <div class="info-block">
-              <div class="icon">
-                <img src="./assets/icons/perfil.svg" alt="People">
-              </div>
-
-              <p>5 pessoas</p>
-            </div>
-
-            <div class="info-block">
-              <div class="icon">
-                <img src="./assets/icons/hp.svg" alt="HP">
-              </div>
-
-              <p>280 HP</p>
-            </div>
-          </div>
-
-          <div class="text">
-            <h4>
-              SOBRE O CARRO
-            </h4>
-
-            <p>
-              Este é automóvel desportivo. Surgiu do lendário touro de lide indultado na praça Real Maestranza de
-              Sevilla. É um belíssimo carro para quem gosta de acelerar.
-            </p>
-          </div>
-
-            <button type="button">Comprar carro</button>
-        </main>
+        <main></main>
       </div>
     </div>
   </div>
 </body>
+
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="./js/show-car/main.js"></script>
 
 </html>
