Fixed the image of car

--- a/show-car.html
+++ b/show-car.html
@@ -68,9 +68,7 @@
       </aside>
 
       <div class="wrapper-car">
-        <div class="image">
-          <img src="./assets/images/car-selected.png" alt="imagem de carro">
-        </div>
+        <div class="image"></div>
 
         <main></main>
       </div>
