--- a/car-bought.html
+++ b/car-bought.html
@@ -2,13 +2,19 @@
 <html lang="pt-br">
 
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Carro Comprado</title>
 
-  <link rel="stylesheet" href="./css/global.css">
+  <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@500;600&family=Inter:wght@400;500;600&display=swap"
+    rel="stylesheet">
 
+  <link rel="stylesheet" href="./css/global.css">
   <link rel="stylesheet" href="./css/pages/car-bought.css">
 </head>
 
