--- a/perfil-user.html
+++ b/perfil-user.html
@@ -40,7 +40,7 @@
         <div class="box-login">
           <p>
             <a href="#">
-              <img src="./assets/icons/logout.svg" alt="Sair">
+              <img onmouseover="chageImg(this)" onmouseout="revertImg(this)" src="./assets/icons/logout.svg" alt="Sair">
             </a>
           </p>
         </div>
@@ -250,5 +250,6 @@
 </body>
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="./js/perfil-user/index.js"></script>
 
 </html>
