Added Divider to User Perfil Page

--- a/perfil-user.html
+++ b/perfil-user.html
@@ -112,6 +112,8 @@
           </div>
         </div>
 
+        <div class="divider"></div>
+
         <div class="user-history">
           <h2 class="title">Compras feitas</h2>
 
