--- a/create-car.html
+++ b/create-car.html
@@ -85,10 +85,7 @@
             </p>
           </div>
 
-          <form id="create-car" onsubmit="Form">
-
-            <!-- Stage 1 -->
-
+          <form id="create-car">
             <div class="input-block">
               <input name="name" id="name" type="text" placeholder="Nome">
             </div>
@@ -96,106 +93,31 @@
             <div class="input-block">
               <select name="brand" id="brand">
                 <option value="">Selecione uma Marca</option>
-                <option value="id_1">Fiat</option>
-                <option value="id_2">Jeep</option>
-                <option value="id_3">BMW</option>
-                <option value="id_4">Audi</option>
               </select>
             </div>
 
             <div class="input-block">
               <select name="fuel" id="fuel">
                 <option value="">Selecione um tipo de combustível</option>
-                <option value="id_1">Gasolina</option>
-                <option value="id_2">Elétrico</option>
-                <option value="id_3">Álcool</option>
               </select>
             </div>
 
             <div class="input-block">
               <select name="transmission" id="transmission">
                 <option value="">Selecione um tipo de transmissão</option>
-                <option value="id_1">Manual</option>
-                <option value="id_2">Automático</option>
               </select>
             </div>
 
             <div class="input-block">
               <select name="category" id="category">
                 <option value="">Selecione uma categoria</option>
-                <option value="id_1">SUV</option>
-                <option value="id_2">Hatch</option>
-                <option value="id_3">Picape</option>
-                <option value="id_4">Familiar</option>
               </select>
             </div>
-
-
-            <!-- 
-              Stage 2
-
-              <div class="input-block">
-                <input name="speed" id="speed" type="text" placeholder="Velocidade Máxima (KM/H)">
-              </div>
-
-              <div class="input-block">
-                <input name="amount_people" id="amount_people" type="number" placeholder="Quantidade de pessoas">
-              </div>
-
-              <div class="input-block">
-                <input name="horse_power" id="horse_power" type="number" placeholder="Caválos de Força">
-              </div>
-
-              <div class="input-block">
-                <input name="acceleration" id="acceleration" type="text" placeholder="Aceleração (Tempo de 0 a 100km/h)">
-              </div>
-
-              <div class="input-block">
-                <input name="price" id="price" type="number" step="100" placeholder="Preço (R$)">
-              </div>
-             -->
-
-            <!-- 
-              Stage 3
-
-              <div class="input-block">
-                <input name="amount_in_storage" id="amount_in_storage" type="number"  step="10" placeholder="Quantidade em Estoque">
-              </div>
-
-              <div class="input-block">
-                <textarea name="description" id="description" placeholder="Descrição do Carro"></textarea>
-              </div>
-             -->
-            <!-- 
-              Stage 4
-
-              <button type="button" class="new-file">
-                <img src="./assets/icons/plus.svg" alt="+">
-              </button>
-
-              <div class="input-block">
-                <div class="icon-input">
-                  <img src="./assets/icons/up.svg" alt="UP">
-                </div>
-
-                <label for="image_main">Imagem principal do Carro</label>
-                <input name="image_main" id="image_main" type="file">
-              </div>
-
-              <div class="input-block">
-                <div class="icon-input">
-                  <img src="./assets/icons/up.svg" alt="UP">
-                </div>
-
-                <label for="image_2">Selecionar uma imagem</label>
-                <input name="image_2" id="image_2" type="file">
-              </div> 
-            -->
 
           </form>
 
           <div class="button space-up">
-            <button type="button">Próximo</button>
+            <button type="button" onclick="stageOne.exec()">Próximo</button>
           </div>
 
           <p class="stage">1 de 4</p>
@@ -208,5 +130,8 @@
     </div>
   </div>
 </body>
+
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="./js/create-car/main.js"></script>
 
 </html>
