Updated List Cars: Verified if user is authenticated

--- a/list-cars.html
+++ b/list-cars.html
@@ -34,17 +34,7 @@
           Início
         </h3>
 
-        <div class="box-login">
-          <p>
-            <a href="./login-user.html">
-              Faça Login
-            </a>
-          </p>
-
-          <div class="user">
-            <img src="./assets/icons/perfil.svg" alt="Photo">
-          </div>
-        </div>
+        <div class="box-login"></div>
       </div>
     </header>
 
@@ -89,5 +79,6 @@
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="./js/list-cars/main.js"></script>
+<script src="./js/list-cars/isLogged.js"></script>
 
 </html>
