Updated the Folder Structure of Project

--- a/list-cars.html
+++ b/list-cars.html
@@ -70,15 +70,14 @@
 
         <hr>
 
-        <main id="list">
-        </main>
+        <main id="list"></main>
       </div>
     </div>
   </div>
 </body>
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script src="./js/list-cars/main.js"></script>
+<script src="./js/list-cars/index.js"></script>
 <script src="./js/list-cars/isLogged.js"></script>
 
 </html>
