--- a/perfil-user.html
+++ b/perfil-user.html
@@ -93,134 +93,7 @@
         <div class="user-history">
           <h2 class="title">Compras feitas</h2>
 
-          <div class="wrapper-history">
-
-            <!-- <div class="car">
-              <div class="car-content">
-                <a href="./show-car.html?carId=${car.id}">
-                  <div class="car-image">
-                    <img src="./assets/images/RS5Coupe.png" alt="RS 5 Coupé">
-                  </div>
-
-                  <div class="info">
-                    <span>AUDI</span>
-
-                    <div class="info-content">
-                      <div class="group-info">
-                        <h3>RS 5 Coupé</h3>
-
-                        <div class="group-price">
-                          <span>R$ 90.000,00</span>
-                          <img src="./assets/icons/energy.svg" alt="Elétrico">
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-
-            <div class="car">
-              <div class="car-content">
-                <a href="./show-car.html?carId=${car.id}">
-                  <div class="car-image">
-                    <img src="./assets/images/Corvete Z06.png" alt="Corvete">
-                  </div>
-
-                  <div class="info">
-                    <span>AUDI</span>
-
-                    <div class="info-content">
-                      <div class="group-info">
-                        <h3>Corvete Z06</h3>
-
-                        <div class="group-price">
-                          <span>R$ 90.000,00</span>
-                          <img src="./assets/icons/energy.svg" alt="Elétrico">
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-
-            <div class="car">
-              <div class="car-content">
-                <a href="./show-car.html?carId=${car.id}">
-                  <div class="car-image">
-                    <img src="./assets/images/Lambo.png" alt="Lambo">
-                  </div>
-
-                  <div class="info">
-                    <span>AUDI</span>
-
-                    <div class="info-content">
-                      <div class="group-info">
-                        <h3>Lamborghini</h3>
-
-                        <div class="group-price">
-                          <span>R$ 90.000,00</span>
-                          <img src="./assets/icons/energy.svg" alt="Elétrico">
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-
-            <div class="car">
-              <div class="car-content">
-                <a href="./show-car.html?carId=${car.id}">
-                  <div class="car-image">
-                    <img src="./assets/images/Volvo.png" alt="Volvo">
-                  </div>
-
-                  <div class="info">
-                    <span>AUDI</span>
-
-                    <div class="info-content">
-                      <div class="group-info">
-                        <h3>Volvo</h3>
-
-                        <div class="group-price">
-                          <span>R$ 90.000,00</span>
-                          <img src="./assets/icons/energy.svg" alt="Elétrico">
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-
-            <div class="car">
-              <div class="car-content">
-                <a href="./show-car.html?carId=${car.id}">
-                  <div class="car-image">
-                    <img src="./assets/images/Lancer.png" alt="Lancer">
-                  </div>
-
-                  <div class="info">
-                    <span>AUDI</span>
-
-                    <div class="info-content">
-                      <div class="group-info">
-                        <h3>Lancer</h3>
-
-                        <div class="group-price">
-                          <span>R$ 90.000,00</span>
-                          <img src="./assets/icons/energy.svg" alt="Elétrico">
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div> -->
-          
-          </div>
+          <div class="wrapper-history"></div>
         </div>
       </div>
     </div>
@@ -228,7 +101,7 @@
 </body>
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script src="./js/perfil-user/main.js"></script>
+<script src="./js/perfil-user/animation.js"></script>
 <script src="./js/perfil-user/index.js"></script>
 
 </html>
