--- a/show-car.html
+++ b/show-car.html
@@ -35,11 +35,7 @@
           <img src="./assets/icons/arrow.svg" alt="<-">
         </a>
 
-        <div class="wrapper-title">
-          <span>AUDI</span>
-          <h3>Q3 Baita Foda <span>R$ 90,000.00</span></h3>
-        </div>
-
+        <div class="wrapper-title"></div>
         <hr>
       </div>
     </header>
@@ -77,6 +73,6 @@
 </body>
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script src="./js/show-car/main.js"></script>
+<script src="./js/show-car.js"></script>
 
 </html>
