--- a/create-user.html
+++ b/create-user.html
@@ -132,6 +132,6 @@
 </body>
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script src="./js/create-user/main.js"></script>
+<script src="./js/create-user.js"></script>
 
 </html>
