--- a/login-user.html
+++ b/login-user.html
@@ -120,6 +120,6 @@
 </body>
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script src="./js/login-user/main.js"></script>
+<script src="./js/login-user.js"></script>
 
 </html>
