--- a/create-car.html
+++ b/create-car.html
@@ -133,5 +133,6 @@
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="./js/create-car.js"></script>
+<script src="./js/isLogged.js"></script>
 
 </html>
