--- a/list-cars.html
+++ b/list-cars.html
@@ -77,7 +77,7 @@
 </body>
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script src="./js/list-cars/index.js"></script>
-<script src="./js/list-cars/isLogged.js"></script>
+<script src="./js/list-cars.js"></script>
+<script src="./js/isLogged.js"></script>
 
 </html>
