--- a/create-user.html
+++ b/create-user.html
@@ -133,6 +133,6 @@
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="./js/create-user.js"></script>
-<script src="./js/isLogged.js"></script>
+<script src="./js/isLoggedHeader.js"></script>
 
 </html>
