--- a/list-cars.html
+++ b/list-cars.html
@@ -78,6 +78,6 @@
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="./js/list-cars.js"></script>
-<script src="./js/isLogged.js"></script>
+<script src="./js/isLoggedHeader.js"></script>
 
 </html>
