Do not allow non-admin user to register car

--- a/create-car.html
+++ b/create-car.html
@@ -20,6 +20,8 @@
   <link rel="stylesheet" href="./css/partials/layout-form.css">
   <link rel="stylesheet" href="./css/pages/create-car.css">
 
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="./js/verifyUser/verifyUserCreateCar.js"></script>
 </head>
 
 <body>
@@ -131,8 +133,7 @@
   </div>
 </body>
 
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="./js/create-car.js"></script>
-<script src="./js/isLogged.js"></script>
+<script src="./js/isLoggedHeader.js"></script>
 
 </html>
