Added the Functionality of User Updated

--- a/perfil-user.html
+++ b/perfil-user.html
@@ -81,7 +81,7 @@
             <div class="wrapper-data">
               <h4>Dados</h4>
 
-              <form id="update-user" onsubmit="Form"></form>
+              <form id="update-user" onsubmit="Form.updateUser(event)"></form>
 
               <button type="submit" class="button" form="update-user">Salvar Alterações</button>
             </div>
