Added link to User Perfil

--- a/car-bought.html
+++ b/car-bought.html
@@ -30,7 +30,7 @@
         <p>Agora você so precisa ir até a concessionária da KMD Automóveis pegar seu carro.</p>
       </div>
 
-      <a href="#">Ok</a>
+      <a href="./perfil-user.html">Ok</a>
     </div>
   </div>
 </body>
