Show the Bought History of User

--- a/perfil-user.html
+++ b/perfil-user.html
@@ -73,10 +73,7 @@
       <div class="wrapper-perfil">
         <div class="user-data">
           <div class="content-user">
-            <div class="wrapper-image">
-              <img src="https://github.com/DouglasSoares16.png" alt="Douglas Soares">
-              <img src="./assets/icons/changed-photo.svg" alt="Alterar" class="change-img">
-            </div>
+            <div class="wrapper-image"></div>
 
             <div class="wrapper-data">
               <h4>Dados</h4>
