Added functionality of Logout

--- a/perfil-user.html
+++ b/perfil-user.html
@@ -39,7 +39,7 @@
 
         <div class="box-login">
           <p>
-            <a href="#">
+            <a onclick="logout()" href="#">
               <img onmouseover="chageImg(this)" onmouseout="revertImg(this)" src="./assets/icons/logout.svg" alt="Sair">
             </a>
           </p>
